# execute_code_py

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  run-mcp-server.sh
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
hooks/scripts/: enforce-tool.sh
mcp-server/: server.py
skills/code-only-env/: SKILL.md  best-practices.md  capabilities.md  environment.md
